--- a/static/simple-sidebar.css
+++ b/static/simple-sidebar.css
@@ -6,6 +6,8 @@
 
 body {
   overflow-x: hidden;
+  position: relative;
+  top: 0;
 }
 
 #wrapper {
@@ -14,6 +16,9 @@ body {
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 #wrapper.toggled {
@@ -21,11 +26,11 @@ body {
 }
 
 #sidebar-wrapper {
-  z-index: 1000;
   position: fixed;
   left: 250px;
   width: 0;
   height: 100%;
+  z-index: 1000;
   margin-left: -250px;
   overflow-y: auto;
   background: #378AFF;
@@ -41,12 +46,12 @@ body {
 
 #page-content-wrapper {
   width: 100%;
-  position: absolute;
+  position: relative;
   padding: 15px;
 }
 
 #wrapper.toggled #page-content-wrapper {
-  position: absolute;
+  position: relative;
   margin-right: -250px;
 }
 
